--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,33 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
-<div id="fir">
-    jjjj
+<div id="headSection">
+  Picture
 </div>
+
+<div id="firstColumn">
+
+  <h1> who we are</h1>
+
+
+  <p> We are small firm providing web solutions. concentrated on Ruby on rails for server side script.We can do services like Website creation, Web 2.0 User Interface, Graphic works for print media etc..</p>
+
+  <h1>  our motto </h1>
+
+  We believe in making a positive impact on the environment, consumers, employees, communities, stakeholders and all other members of the public sphere by our activities. we wish to promote  public interest by encouraging community growth and development. we wish to voluntarily eliminating practices that harm the public sphere and deliberately include public interest into corporate decision-making by honoring people, planet, and profit.
+
+
+</div>
+
+<div id="lastColumn">
+
+           <p> Services </p>
+           <p>
+             Testimonial </p>
+  <!-- Google Reader Element -->
+  <div id="readershared">     <div></div></div>
+  <script type="text/javascript">window.GRC_m=function(d){return new GRC(d,document.getElementById("readershared").firstChild);};</script>
+  <script type="text/javascript" src="http://www.google.com/reader/ui/publisher-en.js"></script>
+  <script type="text/javascript" src="http://www.google.com/reader/public/javascript/user/00347696117941143316/state/com.google/broadcast?n=5&callback=GRC_p(%7Bc%3A%22blue%22%2Ct%3A%22Testimonials%22%2Cs%3A%22false%22%2Cn%3A%22true%22%2Cb%3A%22false%22%2Cw%3A%22true%22%7D)%3Bnew%20GRC_m&t="></script>
+
+</div>
+
+
+
