--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,42 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body class="container">
+<body>
+
+<div id="headSection">
+  Picture
+</div>
+
+
 
 <%= yield %>
+
+<div id="footerSection">
+
+  <div id="addThis">
+
+    <!-- AddThis Button BEGIN -->
+    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+      <a class="addthis_button_preferred_1"></a>
+      <a class="addthis_button_preferred_2"></a>
+      <a class="addthis_button_preferred_3"></a>
+      <a class="addthis_button_preferred_4"></a>
+      <a class="addthis_button_compact"></a>
+      <a class="addthis_counter addthis_bubble_style"></a>
+    </div>
+    <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=klairvoyant"></script>
+    <!-- AddThis Button END -->
+  </div>
+
+  <div id='translate'>
+    <!-- Google Translate Element -->
+    <div id="google_translate_element" style="display:block"></div><script>
+      function googleTranslateElementInit() {
+          new google.translate.TranslateElement({pageLanguage: "en"}, "google_translate_element");
+      };</script>
+    <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  </div>
+</div>
 
 </body>
 </html>
