--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,3 @@
-<div id="headSection">
-  Picture
-</div>
-
 <div id="firstColumn">
 
   <h1> who we are</h1>
@@ -19,15 +15,16 @@
 <div id="lastColumn">
 
            <p> Services </p>
-           <p>
-             Testimonial </p>
-  <!-- Google Reader Element -->
-  <div id="readershared">     <div></div></div>
-  <script type="text/javascript">window.GRC_m=function(d){return new GRC(d,document.getElementById("readershared").firstChild);};</script>
-  <script type="text/javascript" src="http://www.google.com/reader/ui/publisher-en.js"></script>
-  <script type="text/javascript" src="http://www.google.com/reader/public/javascript/user/00347696117941143316/state/com.google/broadcast?n=5&callback=GRC_p(%7Bc%3A%22blue%22%2Ct%3A%22Testimonials%22%2Cs%3A%22false%22%2Cn%3A%22true%22%2Cb%3A%22false%22%2Cw%3A%22true%22%7D)%3Bnew%20GRC_m&t="></script>
+
+  <div id="testimonials">
+
+  <a href="http://klairvoyantinfo.blogspot.com">Testimonials</a>
+
+  </div>
 
 </div>
+
+
 
 
 
