--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -1,2 +1,55 @@
-<h1>Welcome#services</h1>
-<p>Find me in app/views/welcome/services.html.erb</p>
+<div id="firstColumn">
+
+
+
+
+  <p> Our service concentrated on web and it's related technologies. we love open source philosophy. we use Linux and other "Free" softwares for the development process. In case of works which are not in open source we outsource it with others.
+
+    For server side scripting we using ruby on rails and it's related technologies. other service include usage of Google map API, Facebook Development, Heroku,site design, slicing,  web master services.Our graphic works include design of brochure, Flayer , Business card, Banner,Mock ups , etc..
+
+    Finally in internet marketing our service include  Search Engine optimization( SEO ) ,Search Engine Marketing ( SEM ), Social Media Marketing ( SMM ) and keyword research.
+  </p>
+
+
+  <h1> Any Questions ? </h1>
+
+  Here we wish to answer your web questions freely. so feels free to ask any questions, we ready to answer. we publish it in the below section "Answers"
+  form
+
+  <a href="http://klairvoyant.wordpress.com">Questions</a>
+
+</div>
+
+<div id="lastColumn">
+
+  <p> Services </p>
+
+  <div id="payment">
+
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="JYHMT9GAXEGCJ">
+      <table>
+        <tr><td><input type="hidden" name="on0" value="Service Charges">Service Charges</td></tr><tr><td><select name="os0">
+        <option value="1">1 $50.00 USD</option>
+        <option value="2">2 $100.00 USD</option>
+        <option value="3">3 $200.00 USD</option>
+        <option value="4">4 $500.00 USD</option>
+      </select> </td></tr>
+      </table>
+      <input type="hidden" name="currency_code" value="USD">
+      <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
+      <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+    </form>
+
+
+  </div>
+
+  Answers yahoo
+
+  Videos
+
+  <a href="http://www.youtube.com/watch?v=Gc4HGQHgeFE&list=PL26FC5123C60444A5&context=C4093b16ADvjVQa1PpcFPgJ5mhQrRoX3bP_qF4ldIRkZWC4nz0QKs%3D">Videos</a>
+
+
+</div>
