--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,2 +1,40 @@
-<h1>Welcome#contact</h1>
-<p>Find me in app/views/welcome/contact.html.erb</p>
+<div id="firstColumn">
+
+  Mail us  box
+
+  follow us on linkedin
+
+  <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+  <script type="IN/CompanyProfile" data-id="2146610" data-format="hover" data-text="klairvoyant Infosolutions" data-related="false"></script>
+
+  <a href="https://twitter.com/klairvoyantinfo" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @klairvoyantinfo</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+  <!-- Google Maps Element Code -->
+  <iframe frameborder=0 marginwidth=0 marginheight=0 border=0 style="border:0;margin:0;width:300px;height:250px;" src="http://www.google.com/uds/modules/elements/mapselement/iframe.html?maptype=roadmap&latlng=10.618599%2C76.036891&mlatlng=10.618599%2C76.036891&maddress1=Muttath%2C%20kottapady&maddress2=Kerala%20680505%2C%20India&mtitle=Klairvoyant%20Infosolutions&element=true" scrolling="no" allowtransparency="true"></iframe>
+
+
+</div>
+
+<div id="lastColumn">
+
+  Address
+
+  Post Box  No: 709, East Fort, Thrissur, Kerala, India 680005
+
+  <!--
+Skype 'My status' button
+http://www.skype.com/go/skypebuttons
+-->
+  <script type="text/javascript" src="http://download.skype.com/share/skypebuttons/js/skypeCheck.js"></script>
+  <a href="skype:klairvoyantinfo?call"><img src="http://mystatus.skype.com/bigclassic/klairvoyantinfo" style="border: none;" width="182" height="44" alt="My status" /></a>
+
+  <!-- Facebook Badge START --><a href="https://www.facebook.com/klairvoyant.info" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Klairvoyant Infosolutions">Klairvoyant Infosolutions</a><span style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; line-height: 16px; font-variant: normal; font-style: normal; font-weight: normal; color: #555555; text-decoration: none;">&nbsp;|&nbsp;</span><a href="http://www.facebook.com/business/dashboard/" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Make your own badge!">Promote Your Page Too</a><br/><a href="https://www.facebook.com/klairvoyant.info" target="_TOP" title="Klairvoyant Infosolutions"><img src="https://badge.facebook.com/badge/176523462377124.2170.36631937.png" style="border: 0px;" /></a><!-- Facebook Badge END -->
+
+
+</div>
+
+
+
+
+
