--- a/app/views/welcome/design.html.erb
+++ b/app/views/welcome/design.html.erb
@@ -1,2 +1,66 @@
-<h1>Welcome#design</h1>
-<p>Find me in app/views/welcome/design.html.erb</p>
+<div id="firstColumn">
+
+  We provide solutions to Website Design,Website Creation, and Web Master Services.
+
+
+
+  Website Design
+
+  Web design means creation of web pages with respect to it's layout and presentation rather than functionality. Development includes making up of visual elements including page layout, background and spot imagery, color scheme, typography, navigation buttons,Web 2.0 etc.
+
+
+
+  Website Creation.
+
+  website creation  includes domain registration, web hosting, slicing, content development, code development, Implementing SEO features, providing functionality to hyperlinks, blog links, affiliation links and Finally Implementing SMM features like share buttons, like buttons,Follow me buttons, YouTube, Google Maps, and chatting components.
+
+  we also take care for pages being "W3C "valid, and "table less"
+
+
+
+  Web Master Services
+
+  Main responsibility is maintaining the websites. services include replying to user comments,examining traffic through the site, "CPanel" Services like file uploadings, site modifications, Providing FTP file access  etc.. we also  provide Google webmaster tools service like Google Analytics, Google AdSense and Google Apps.
+
+  <script type="text/javascript"><!--
+  google_ad_client = "ca-pub-1582243133898514";
+  /* Web Design */
+  google_ad_slot = "7675708677";
+  google_ad_width = 250;
+  google_ad_height = 250;
+  //-->
+  </script>
+  <script type="text/javascript"
+          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  </script>
+
+</div>
+
+<div id="lastColumn">
+
+  <p> Services </p>
+
+
+  ruby on rails
+  Graphic design
+  internet marketing
+
+  -----------------------------------
+
+  portfolio
+
+
+  pictures
+
+  --------------------
+
+  web development blog
+
+  <script src="http://feeds.feedburner.com/blogspot/GAHiE?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/GAHiE"></a><br/>Powered by FeedBurner</p> </noscript>
+
+</div>
+
+
+
+
+
