--- a/app/views/welcome/graphic.html.erb
+++ b/app/views/welcome/graphic.html.erb
@@ -1,2 +1,65 @@
-<h1>Welcome#graphic</h1>
-<p>Find me in app/views/welcome/graphic.html.erb</p>
+<div id="firstColumn">
+
+  We provide services in graphic design, web page design and in photo editing.
+
+  Graphic design
+
+  It is a creative process involving client,designer,printers, programmers etc.Our services include creation of Logo,brochure, Flyer, Business card and Banner.
+
+
+  Web page Design ( Mockup )
+
+  It involved making of a sample page for developer. It's involves taking care of many parameters which should compatible with developer needs. Our service include creation of mockup, templates etc..
+
+
+  Photo Editing
+
+  It is the process of manipulating a digital photo. Our services include background removal, photo enhancement, photo Editing etc..
+
+
+  <script type="text/javascript"><!--
+  google_ad_client = "ca-pub-1582243133898514";
+  /* Graphic Design */
+  google_ad_slot = "5657400514";
+  google_ad_width = 250;
+  google_ad_height = 250;
+  //-->
+  </script>
+  <script type="text/javascript"
+          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  </script>
+
+</div>
+
+<div id="lastColumn">
+
+  <p> Services </p>
+
+  ruby on rails
+  web design
+  internet marketing
+
+
+  portfolio
+
+
+  pictures
+
+  --------------------
+
+
+  Graphic design blog
+
+  <script src="http://feeds.feedburner.com/GraphicWorksTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/GraphicWorksTips"></a><br/>Powered by FeedBurner</p> </noscript>
+
+
+
+</div>
+
+
+
+
+
+
+
+
