--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
+
 <div id="firstColumn">
+
 
   <h1> who we are</h1>
 
@@ -10,17 +12,19 @@
   We believe in making a positive impact on the environment, consumers, employees, communities, stakeholders and all other members of the public sphere by our activities. we wish to promote  public interest by encouraging community growth and development. we wish to voluntarily eliminating practices that harm the public sphere and deliberately include public interest into corporate decision-making by honoring people, planet, and profit.
 
 
+  <script src="http://feeds.feedburner.com/blogspot/arlnu?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/arlnu"></a><br/>Powered by FeedBurner</p> </noscript>
+
 </div>
 
 <div id="lastColumn">
 
            <p> Services </p>
 
-  <div id="testimonials">
 
-  <a href="http://klairvoyantinfo.blogspot.com">Testimonials</a>
 
-  </div>
+    <script src="http://feeds.feedburner.com/blogspot/mqnLb?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/mqnLb"></a><br/>Powered by FeedBurner</p> </noscript>
+
+
 
 </div>
 
