--- a/app/views/welcome/marketing.html.erb
+++ b/app/views/welcome/marketing.html.erb
@@ -1,2 +1,68 @@
-<h1>Welcome#marketing</h1>
-<p>Find me in app/views/welcome/marketing.html.erb</p>
+<div id="firstColumn">
+  We provide services for Search engine optimization( SEO ), Search engine marketing ( SEM ) ,Social media marketing( SMM ), Affiliate Marketing and keyword research
+
+
+
+  Search Engine Optimization ( SEO )
+
+  Is the use of various techniques to improve a web site's ranking in the search engines and thus attract more visitors. It involved taking care in Meta Tag, Title Tag, Keywords, Keyword density, keyword prominence, Implementing  social media links, keyword research etc..
+
+
+
+  Search Engine Marketing ( SEM )
+
+  Is a form of Internet marketing that seeks to promote websites by increasing their visibility in search engine result pages through the use of various methods like link making, paid placement, contextual advertising, article submissions, book marking,directory submission, keyword research etc.. Google AdWords, PPC etc  are related to SEM.
+
+
+
+  Social Media Marketing ( SMM )
+
+  Is about promoting your website, product or services on Social Networking sites such as Facebook, Twitter, YouTube or Social Bookmarking sites such as Digg, Stumble Upon and Delicious.  Following are SMM related terms "like button", "follow me button", "tweet me", "share me " etc..
+
+
+
+  Affiliate Marketing
+
+  Is a revenue sharing venture between a website owner and an online merchant. The website owner will place advertisements on his websites for a share of the profits. google AdSense is a example for Affiliate marketing.
+
+  <script type="text/javascript"><!--
+  google_ad_client = "ca-pub-1582243133898514";
+  /* Marketing */
+  google_ad_slot = "4484923741";
+  google_ad_width = 728;
+  google_ad_height = 90;
+  //-->
+  </script>
+  <script type="text/javascript"
+          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  </script>
+
+</div>
+
+<div id="lastColumn">
+
+  <p> Services </p>
+
+  ruby on rails
+  Graphic design
+  web development
+
+
+  Our strategy
+
+  https://docs.google.com/a/klairvoyant.com/document/d/1kga42CVUVERMkEI68a6iHgE9lULPZfEoOW3Zre0QQdY/edit?hl=en&pli=1
+
+  ---------------------------------------------------------
+
+  SEo Tips
+
+  <script src="http://feeds.feedburner.com/blogspot/fqUTL?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/fqUTL"></a><br/>Powered by FeedBurner</p> </noscript>
+
+
+
+</div>
+
+
+
+
+
