--- a/app/views/welcome/rails.html.erb
+++ b/app/views/welcome/rails.html.erb
@@ -1,2 +1,35 @@
-<h1>Welcome#rails</h1>
-<p>Find me in app/views/welcome/rails.html.erb</p>
+
+<div id="firstColumn">
+
+  We provide web solutions using ruby on rails and  related web technologies like jQuery, ERB, HAML, SASS, Blueprint, HTML 5, Ajax, JSON,CSS,YAML and MySQL.
+
+  Application API
+
+  We provide services using 1) Google Map API, 2) Facebook API
+
+  Share code, Cloud share and CMS
+
+  Provide service to implement applications in Heroku, GitHub, pivotalTracker and using  Radiant CMS.
+</div>
+
+<div id="lastColumn">
+
+  services
+
+  graphic design,
+  web design
+  internet marketing
+
+  portfolio
+
+  http://www.behance.net/klairvoyant/frame
+
+   <!--<script src="http://feeds.feedburner.com/RubyOnRailsTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/RubyOnRailsTips"></a><br/>Powered by FeedBurner</p> </noscript>-->
+  <script src="http://feeds.feedburner.com/RubyOnRailsTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/RubyOnRailsTips"></a><br/>Powered by FeedBurner</p> </noscript>
+
+</div>
+
+
+
+
+
