--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -16,7 +16,7 @@
   Here we wish to answer your web questions freely. so feels free to ask any questions, we ready to answer. we publish it in the below section "Answers"
   form
 
-  <a href="http://klairvoyant.wordpress.com">Questions</a>
+  <script src="http://feeds.feedburner.com/KlairvoyantsBlog?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/KlairvoyantsBlog"></a><br/>Powered by FeedBurner</p> </noscript>
 
 </div>
 
