--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -22,6 +22,12 @@
 
   Post Box  No: 709, East Fort, Thrissur, Kerala, India 680005
 
+  <iframe src="http://free.timeanddate.com/clock/i314wdpb/n1892/szw110/szh110/hoc09f/hbw0/hfc09f/cf100/hnce1ead6/fas30/fdi66/mqc000/mql15/mqw4/mqd98/mhc000/mhl15/mhw4/mhd98/mmc000/mml10/mmw1/mmd98/hwm1/hhs2/hms2" frameborder="0" width="112" height="112"></iframe>
+  <iframe src="http://free.timeanddate.com/clock/i314wdpb/n1892/tct/pct/ftb/pd2/tt0/tw1/tm1/ts1/ta1/tb4" frameborder="0" width="129" height="34" allowTransparency="true"></iframe>
+
+
+
+
   <!--
 Skype 'My status' button
 http://www.skype.com/go/skypebuttons
