--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -37,6 +37,19 @@ http://www.skype.com/go/skypebuttons
 
   <!-- Facebook Badge START --><a href="https://www.facebook.com/klairvoyant.info" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Klairvoyant Infosolutions">Klairvoyant Infosolutions</a><span style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; line-height: 16px; font-variant: normal; font-style: normal; font-weight: normal; color: #555555; text-decoration: none;">&nbsp;|&nbsp;</span><a href="http://www.facebook.com/business/dashboard/" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Make your own badge!">Promote Your Page Too</a><br/><a href="https://www.facebook.com/klairvoyant.info" target="_TOP" title="Klairvoyant Infosolutions"><img src="https://badge.facebook.com/badge/176523462377124.2170.36631937.png" style="border: 0px;" /></a><!-- Facebook Badge END -->
 
+  <!-- Place this tag in the <head> of your document -->
+  <link href="https://plus.google.com/105958712545412704818" rel="publisher" /><script type="text/javascript">
+    window.___gcfg = {lang: 'en'};
+    (function()
+    {var po = document.createElement("script");
+        po.type = "text/javascript"; po.async = true;po.src = "https://apis.google.com/js/plusone.js";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(po, s);
+    })();</script>
+
+  <!-- Place this tag where you want the badge to render -->
+  <div class="g-plus" data-href="https://plus.google.com/105958712545412704818" data-width="300" data-height="69" data-theme="light"></div>
+
 
 </div>
 
