--- a/app/views/welcome/design.html.erb
+++ b/app/views/welcome/design.html.erb
@@ -57,6 +57,7 @@
   web development blog
 
   <script src="http://feeds.feedburner.com/blogspot/GAHiE?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/GAHiE"></a><br/>Powered by FeedBurner</p> </noscript>
+  <script src="http://feeds.feedburner.com/GoogleMapApiTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/GoogleMapApiTips"></a><br/>Powered by FeedBurner</p> </noscript>
 
 </div>
 
