--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
   <%= stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Tangerine" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <!-- Google plus -->
+  <link href="https://plus.google.com/105958712545412704818" rel="publisher" />
+
 </head>
 <body>
 
@@ -13,24 +16,22 @@
   Klairvoyant  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Infosolutions
 
 
- <div id="navigation">
+     <!--<div id="navigation">
+       <div id="navigationspace">
+                 &nbsp;
+       </div>
 
-   <ul class="dropdown">
-     <li><a href="<%= url_for(:action => 'index', :controller => 'welcome') %>">Home</a>
-     </li>
-     <li><a href="<%= url_for(:action => 'services', :controller => 'welcome') %>">Services</a>
-       <ul class="sub_menu">
-         <li><a href="<%= url_for(:action => 'rails', :controller => 'welcome') %>" >Ruby On Rails</a></li>
-         <li><a href="<%= url_for(:action => 'design', :controller => 'welcome') %>">Web Development</a></li>
-         <li><a href="<%= url_for(:action => 'graphic', :controller => 'welcome') %>">Web Designing</a></li>
-         <li><a href="<%= url_for(:action => 'marketing', :controller => 'welcome') %>">Marketing</a></li>
-       </ul>
-     </li>
-     <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a>
-     </li>
- </ul>
- </div>
+       <ul class="dropdown">
+         <li><a href="<%= url_for(:action => 'index', :controller => 'welcome') %>">Home</a>    </li>
+         <li><a href="<%= url_for(:action => 'services', :controller => 'welcome') %>">Services</a>   </li>
+         <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a>       </li>
+        </ul>
+     </div>
+         -->
+</div>
 
+<div id="leftside">
+    &nbsp;
 </div>
 
 
@@ -39,8 +40,51 @@
 
 <%= yield %>
 
-<div id="footerSection">
+<div id="rightside">
+  &nbsp;
+</div>
 
+<div id="footerSection">
+  <div id='translate'>
+    <!-- Google Translate Element -->
+    <div id="google_translate_element" style="display:block"></div><script>
+      function googleTranslateElementInit() {
+          new google.translate.TranslateElement({pageLanguage: "en"}, "google_translate_element");
+      };</script>
+    <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  </div>
+
+  <div id="time">
+    <iframe src="http://free.timeanddate.com/clock/i314wdpb/n1892/tct/pct/ftb/pd2/tt0/tw1/tm1/ts1/ta1/tb4" frameborder="0" width="129" height="34" allowTransparency="true"></iframe>
+  </div>
+  <div id="skype">
+    <!--
+    Skype 'My status' button
+    http://www.skype.com/go/skypebuttons
+    -->
+    <script type="text/javascript" src="http://download.skype.com/share/skypebuttons/js/skypeCheck.js"></script>
+    <a href="skype:klairvoyantinfo?chat"><img src="http://mystatus.skype.com/mediumicon/klairvoyantinfo" style="border: none;" width="26" height="26" alt="My status" /></a>
+
+
+
+  </div>
+
+  <div id='googleplus'>
+  <!-- google plus -->
+  <a href="https://plus.google.com/105958712545412704818?prsrc=3" style="text-decoration:none;"><img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="" style="border:0;width:32px;height:32px;"/></a>
+  </div>
+  <div id="facebook">
+    <!-- Facebook Badge START --><a href="https://www.facebook.com/klairvoyant.info" target="_TOP" title="Klairvoyant Infosolutions"><img src="https://badge.facebook.com/badge/176523462377124.2170.36631937.png" style="border: 0px;" /></a><!-- Facebook Badge END -->
+  </div>
+    <div id='linkedin'>
+   <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+      <script type="IN/CompanyProfile" data-id="2146610" data-format="hover" data-related="false"></script>
+
+  </div>
+  <div id="twitter">
+    <a href="https://twitter.com/klairvoyantinfo" class="twitter-follow-button" data-show-count="false" data-size="large" data-show-screen-name="false">Follow @klairvoyantinfo</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  </div>
   <div id="addThis">
 
     <!-- AddThis Button BEGIN -->
@@ -56,14 +100,6 @@
     <!-- AddThis Button END -->
   </div>
 
-  <div id='translate'>
-    <!-- Google Translate Element -->
-    <div id="google_translate_element" style="display:block"></div><script>
-      function googleTranslateElementInit() {
-          new google.translate.TranslateElement({pageLanguage: "en"}, "google_translate_element");
-      };</script>
-    <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  </div>
 </div>
 
 </body>
