--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,14 @@
+<div id="navigation">
+  <div id="navigationspace">
+    &nbsp;
+  </div>
 
+  <ul id="menu1" class="dropdown">
+    <li><a href="<%= url_for(:action => 'index', :controller => 'welcome') %>">Home</a>    </li>
+    <li><a href="<%= url_for(:action => 'services', :controller => 'welcome') %>">Services</a>   </li>
+    <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a>       </li>
+  </ul>
+</div>
 <div id="firstColumn">
 
 
