--- a/app/views/welcome/marketing.html.erb
+++ b/app/views/welcome/marketing.html.erb
@@ -1,3 +1,17 @@
+<div id="navigation">
+  <div id="navigationspace2">
+    &nbsp;
+  </div>
+
+  <ul id="menu2" class="dropdown">
+    <li><a href="<%= url_for(:action => 'index', :controller => 'welcome') %>">Home</a>    </li>
+    <li><a href="<%= url_for(:action => 'rails', :controller => 'welcome') %>">Rails</a>   </li>
+    <li><a href="<%= url_for(:action => 'design', :controller => 'welcome') %>">Web</a>   </li>
+    <li><a href="<%= url_for(:action => 'graphic', :controller => 'welcome') %>">Graphic</a>   </li>
+    <li><a href="<%= url_for(:action => 'marketing', :controller => 'welcome') %>">Marketing</a>   </li>
+    <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a>       </li>
+  </ul>
+</div>
 <div id="firstColumn">
   We provide services for Search engine optimization( SEO ), Search engine marketing ( SEM ) ,Social media marketing( SMM ), Affiliate Marketing and keyword research
 
