--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -4,6 +4,7 @@
 
 @import "blueprint/liquid";
 @import "compass/css3";
+@import "compass/typography/lists/horizontal-list";
 
 /*#fir {
       background-color: red;
@@ -14,7 +15,7 @@
 
 #headSection {
   @include column(24,true);
-  height: 250px;
+  //height: 200px;
   text-align: center;
   background-image: url("klairvoyantlogo.jpg");
   background-position: center top;
@@ -29,38 +30,76 @@
 
 #firstColumn {
 
-   @include column(16);
+   @include column(13);
    background-color: #ffebcd;
 
 }
 #lastColumn {
 
-  @include column(8,true);
+  @include column(7);
   background-color: #eee8aa;
 
 }
 #addThis {
-  @include column(16);
-  /*position: relative;
-  left: 100px;*/
+  @include column(8,true);
   padding-bottom: 30px;
   padding-top: 30px;
 
 }
-#translate {
-  @include column(8,true);
-  /*position: relative;
-  left: 100px;*/
+#skype {
+  @include column(1);
+
   padding-bottom: 30px;
   padding-top: 30px;
 }
+#time {
+  @include column(3);
+
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+#googleplus {
+  @include column(1);
+
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+#facebook {
+  @include column(3);
+
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+#twitter {
+  @include column(3);
+
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+#linkedin {
+  @include column(1);
+
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+#translate {
+  @include column(4);
+
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+
 #testimonials {
   @include column(8,true);
 
 }
 
 #footerSection {
-  @include column(16, true);
+  @include column(24, true);
+  background-image: url("Klairvoyantbackground.jpg");
 
 }
 
@@ -92,9 +131,67 @@ div.feedburnerFeedBlock ul li span.headline {
 
 /*for feed burner*/
 
+#navigationspace {
+  @include column(14);
+  background-color:#55b9eb;
+
+}
+#navigationspace2 {
+  @include column(5);
+  background-color:#55b9eb;
+
+}
+
 #navigation {
 
   font-size: 20px;
   font-family: sans-serif;
+  @include column(20,true);
+
+  border-style: solid;
+  border-width: 1px;
+  border-color:#55b9eb;
+
+
+}
+
+
+
+ul.dropdown {
+
+
+@include horizontal-list(25px);
+  a{
+  text-decoration: none;
+  color: #55b9eb;
+  &:hover {
+  color: #1574c4;
+  }
+  }
+
+}
+
+#menu1 {
+  @include column(10,true);
+}
+
+#menu2 {
+  @include column(19,true);
+
+  }
+
+
+#leftside {
+  @include column(2);
+  background-image: url("side.jpg");
+  height: 400px;
+
+
+}
+#rightside {
+  @include column(2,true);
+  background-image: url("side.jpg");
+  height: 400px;
+
 
 }
