--- a/app/views/welcome/rails.html.erb
+++ b/app/views/welcome/rails.html.erb
@@ -1,4 +1,17 @@
+<div id="navigation">
+  <div id="navigationspace2">
+    &nbsp;
+  </div>
 
+  <ul id="menu2" class="dropdown">
+    <li><a href="<%= url_for(:action => 'index', :controller => 'welcome') %>">Home</a>    </li>
+    <li><a href="<%= url_for(:action => 'rails', :controller => 'welcome') %>">Rails</a>   </li>
+    <li><a href="<%= url_for(:action => 'design', :controller => 'welcome') %>">Web</a>   </li>
+    <li><a href="<%= url_for(:action => 'graphic', :controller => 'welcome') %>">Graphic</a>   </li>
+    <li><a href="<%= url_for(:action => 'marketing', :controller => 'welcome') %>">Marketing</a>   </li>
+    <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a>       </li>
+  </ul>
+</div>
 <div id="firstColumn">
 
   We provide web solutions using ruby on rails and  related web technologies like jQuery, ERB, HAML, SASS, Blueprint, HTML 5, Ajax, JSON,CSS,YAML and MySQL.
